--- a/ns-cloner-site-copier/changelog.txt
+++ b/ns-cloner-site-copier/changelog.txt
@@ -1,3 +1,7 @@
+= 4.4.7.4 - 2024.11.13 =
+* Fix: Correct theme set on the cloned site from the source site
+* Fix: PHP notices
+
 = 4.4.7.3 - 2024.10.17 =
 * Cron subsite fixes
 * Other improvements.
