--- a/ns-cloner-site-copier/changelog.txt
+++ b/ns-cloner-site-copier/changelog.txt
@@ -1,3 +1,6 @@
+= 4.4.7.5 - 2024.11.25 =
+* Fix: Text domain loading
+
 = 4.4.7.4 - 2024.11.13 =
 * Fix: Correct theme set on the cloned site from the source site
 * Fix: PHP notices
