--- a/ns-cloner-site-copier/changelog.txt
+++ b/ns-cloner-site-copier/changelog.txt
@@ -1,3 +1,8 @@
+= 4.4.8 - 2025.04.24 =
+* Fix: Cron scheduling - do not schedule cloner cron on sub-sites
+* Fix: PHP notice on number precision
+* Code improvements
+
 = 4.4.7.5 - 2024.11.25 =
 * Fix: Text domain loading
 
