--- a/ns-cloner-site-copier/changelog.txt
+++ b/ns-cloner-site-copier/changelog.txt
@@ -1,3 +1,7 @@
+= 4.4.9.1 - 2025.11.26 =
+* Fix translation notices
+* Other code fixes
+
 = 4.4.9 - 2025.06.10 =
 * Fix: Custom code for cloning from external plugins.
 * Code improvements
